@@ -2584,24 +2584,24 @@
 #define OPT_fresh_before			55
 #define OPT_fresh_after				56
 /* xxx */
-#define OPT_compress_savefile		58
+#define OPT_compress_savefile			58
 #define OPT_hilite_player			59
-#define OPT_view_yellow_lite		60
-#define OPT_view_bright_lite		61
-#define OPT_view_granite_lite		62
-#define OPT_view_special_lite		63
+#define OPT_view_yellow_lite			60
+#define OPT_view_bright_lite			61
+#define OPT_view_granite_lite			62
+#define OPT_view_special_lite			63
 #define OPT_easy_open 				64
 #define OPT_easy_alter 				65
 #define OPT_easy_floor 				66
 #define OPT_show_piles				67
 #define OPT_center_player			68
-#define OPT_run_avoid_center		69
+#define OPT_run_avoid_center			69
 #define OPT_scroll_target			70
 #define OPT_auto_more				71
 #define OPT_smart_monsters			72
 #define OPT_smart_packs				73
 #define OPT_view_player_colour			74
-/* xxx */
+#define OPT_view_equippy_chars			75
 /* xxx */
 /* xxx */
 /* xxx */
@@ -2703,12 +2703,12 @@
 #define fresh_before			op_ptr->opt[OPT_fresh_before]
 #define fresh_after				op_ptr->opt[OPT_fresh_after]
 /* xxx */
-#define compress_savefile		op_ptr->opt[OPT_compress_savefile]
-#define hilite_player			op_ptr->opt[OPT_hilite_player]
-#define view_yellow_lite		op_ptr->opt[OPT_view_yellow_lite]
-#define view_bright_lite		op_ptr->opt[OPT_view_bright_lite]
-#define view_granite_lite		op_ptr->opt[OPT_view_granite_lite]
-#define view_special_lite		op_ptr->opt[OPT_view_special_lite]
+#define compress_savefile              op_ptr->opt[OPT_compress_savefile]
+#define hilite_player                  op_ptr->opt[OPT_hilite_player]
+#define view_yellow_lite               op_ptr->opt[OPT_view_yellow_lite]
+#define view_bright_lite               op_ptr->opt[OPT_view_bright_lite]
+#define view_granite_lite              op_ptr->opt[OPT_view_granite_lite]
+#define view_special_lite              op_ptr->opt[OPT_view_special_lite]
 #define easy_open                      op_ptr->opt[OPT_easy_open]
 #define easy_alter                     op_ptr->opt[OPT_easy_alter]
 #define easy_floor                     op_ptr->opt[OPT_easy_floor]
@@ -2720,7 +2720,7 @@
 #define smart_monsters                 op_ptr->opt[OPT_smart_monsters]
 #define smart_packs                    op_ptr->opt[OPT_smart_packs]
 #define view_player_colour             op_ptr->opt[OPT_view_player_colour]
-/* xxx */
+#define view_equippy_chars             op_ptr->opt[OPT_view_equippy_chars]
 /* xxx */
 /* xxx */
 /* xxx */
